ajuste dijkstra e matriz d